wip: adding getContactoID endpoint.
